<resources>
    <string name="app_name">Rhymes Of Health</string>
    <string name="health_information">Health Information</string>
    <string name="protein_intake">Protein Intake</string>
    <string name="orderHealthRhymes_button_text">Order Health Rhymes</string>
    <string name="makeHealthRhymes_button_text">Make Health Rhymes</string>
    <string name="next_button_text">Next</string>

    <string name="hi_1">Do you have any allergy \ntowards the following products?</string>
    <string name="hi_1_option1">Milk</string>
    <string name="hi_1_option2">Gluten</string>

    <string name="hi_2">Are you a smoker?</string>
    <string name="yesRdbOption">Yes</string>
    <string name="noRdbOption">No</string>

    <string name="hi_3">Do you consume Alcohol?</string>
    <string name="hi_4">Do you suffer from any one of \nthe following known \ndiseases/symptoms?</string>
    <string-array name="knownDiseasesArr">
        <item>Diabetes- Type l</item>
        <item>Diabetes- Type ll</item>
        <item>Hypertension</item>
        <item>Constipation</item>
        <item>Acidity</item>
        <item>Joint Pain</item>
        <item>Knee Pain</item>
        <item>Sexual Wellness</item>
        <item>Stress</item>
        <item>Anemia</item>
        <item>High Level of Cholesterol</item>
        <item>High Level of Uric Acid</item>
        <item>Heart Related Problems</item>
        <item>Bleeding Gums</item>
        <item>Low Blood Pressure</item>
        <item>Celiac Disease</item>
        <item>Lactose Intolerance</item>
        <item>Cough &amp; Cold</item>
        <item>Indigestion</item>
        <item>Protein Energy Malnutrition</item>
        <item>Muscle Weakness</item>
        <item>Sleeplessness</item>
        <item>None of the Above</item>

    </string-array>

    <string name="hi_5">Which of the following known \ndiseases/symptoms is present \nin your Family History?</string>
    <string-array name="familyKnownDiseasesArr">
        <item>Heart Related Problem</item>
        <item>Diabetes</item>
        <item>Hypertension</item>
        <item>Obesity</item>
        <item>Bone Related Problems</item>
        <item>None of the Above</item>
    </string-array>

    <string name="hi_6">Do you have any one of the \nfollowing Vitamin Deficiencies?</string>
    <string-array name="vitaminDefArr">
        <item>Vitamin B12</item>
        <item>Vitamin D</item>
        <item>Hypertension</item>
        <item>Obesity</item>
        <item>Bone Related Problems</item>
        <item>None of the Above</item>
    </string-array>

    <string name="title_activity_protein_intake">ProteinIntake</string>
    <string name="protein_table_MoS">Enter Your Amount of Protein In Common Food</string>


    <string name="introduction1"><b>Introduction</b> \n\n <b>Health Rhymes</b> is a business production strategy that typically allows consumers to purchase products that are customized to their specifications. This strategy only manufactures the end product once the customer places the order, creating additional wait time for the consumer to receive the product but allowing for more flexible customization compared to purchasing directly from retailers&#39; shelves.</string>

    <string-array name="healthProfileArr">
        <item>Name</item>
        <item>Date</item>
        <item>Age</item>
        <item>GENDER</item>
        <item>HEIGHT</item>
        <item>WEIGHT</item>
        <item>FOOD HABIT</item>
        <item>PERSONAL HEALTH HISTORY</item>
        <item>FAMILY HEALTH HISTORY</item>
    </string-array>

</resources>
