<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.thermofisher.ctd.healthrhymes.HealthInformation">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/health_information"
            android:textColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="29dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="388dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <Button
            android:id="@+id/nextbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="123dp"
            android:layout_marginStart="123dp"
            android:background="@drawable/rectangle_button"
            android:onClick="displayProteinIntake"
            android:text="@string/next_button_text" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="380dp"
        android:layout_height="371dp"
        android:layout_marginBottom="79dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.465">

        <ScrollView
            android:id="@+id/layout"
            android:layout_width="380dp"
            android:layout_height="379dp"
            android:scrollbars="horizontal|vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableLayout
                android:id="@+id/tbl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hi_1" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioGroup
                            android:id="@+id/rdbBtnGrp1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rdb1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/hi_1_option1" />

                            <RadioButton
                                android:id="@+id/rdb2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/hi_1_option2" />
                        </RadioGroup>
                    </TableRow>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hi_2" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioGroup
                            android:id="@+id/rdbBtnGrp2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rdb3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/yesRdbOption" />

                            <RadioButton
                                android:id="@+id/rdb4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/noRdbOption" />
                        </RadioGroup>
                    </TableRow>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hi_3" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioGroup
                            android:id="@+id/rdbBtnGrp3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rdb5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/yesRdbOption" />

                            <RadioButton
                                android:id="@+id/rdb6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/noRdbOption" />
                        </RadioGroup>
                    </TableRow>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hi_4" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <ListView

                            android:id="@+id/knownList"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"


                            >

                        </ListView>

                    </TableRow>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hi_5" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <ListView

                            android:id="@+id/familyknownList"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"


                            >

                        </ListView>

                    </TableRow>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hi_6" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <ListView

                            android:id="@+id/deficiencyVitamins"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"


                            >

                        </ListView>

                    </TableRow>

                </TableRow>
            </TableLayout>

        </ScrollView>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
