<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:layout_marginTop="21dp"
            android:text="@string/introduction1"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <Button
            android:id="@+id/button1"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/rectangle_button"

            android:text="@string/orderHealthRhymes_button_text"
            app:layout_constraintBottom_toBottomOf="@+id/textView1"

            app:layout_constraintTop_toTopOf="@+id/button2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="135dp"

            android:onClick="displayHealthProfilePage"
            android:background="@drawable/rectangle_button"

            android:text="@string/makeHealthRhymes_button_text"
            app:layout_constraintBottom_toBottomOf="@+id/button1" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>